force-app/main/default/objects/Contract_Change_Event__e/Contract_Change_Event__e.object-meta.xml
<CustomObject>
    <label>Contract Change Event</label>
    <pluralLabel>Contract Change Events</pluralLabel>
</CustomObject>