force-app/main/default/objects/Contract_Change_Event__e/fields/Change_Time__c.field-meta.xml
<CustomField>
    <fullName>Change_Time__c</fullName>
    <label>Change Time</label>
    <type>DateTime</type>
</CustomField>