force-app/main/default/objects/Contract_Change_Event__e/fields/Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Changed_By__c</fullName>
    <label>Changed By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>