force-app/main/default/objects/Contract_Change_Event__e/fields/Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_Id__c</fullName>
    <label>Contract Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>